# tibet-context

./: .gitignore  README.md  pyproject.toml  tibet-context.toml
src/tibet_context/: __init__.py  __main__.py  builder.py  compactor.py  container.py  gate.py  layers.py  reader.py  serializer.py
src/tibet_context/integration/: __init__.py  carbonara.py  kmbit.py  llm.py  oomllama.py  provider.py
tests/: test_builder.py  test_compactor.py  test_container.py  test_gate.py  test_integration.py  test_layers.py  test_reader.py  test_serializer.py
