[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tibet-context"
version = "0.1.0"
description = "Layered context container with TIBET provenance and JIS capability gating"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "J. van de Meent", email = "jasper@humotica.com"},
    {name = "R. AI", email = "info@humotica.com"},
]
keywords = [
    "context", "layers", "provenance", "audit", "capability",
    "ai-safety", "trust", "tibet", "jis", "gating",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["tibet-core>=0.3.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
tibet-context = "tibet_context.__main__:main"

[project.urls]
Homepage = "https://humotica.com"
Repository = "https://github.com/humotica/tibet-context"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/tibet_context"]
